--- a/style.css
+++ b/style.css
@@ -161,3 +161,13 @@ body {
   font-size: 1.1rem;
   color: #444;
 }
+.maintenance-message {
+  text-align: center;
+  padding: 100px 20px;
+  font-size: 1.2rem;
+  color: #444;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
